# insurance-mcp

./: .gitignore  DATA_MODEL_PATCH.md  Docling集成计划.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MARKDOWN_ENHANCEMENT_PATCH.md  METADATA_STRUCTURE.md  MIGRATION_REPORT.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_PACKAGE_README.md  P0_ENHANCEMENT_SUMMARY.md  PHASE5_IMPLEMENTATION_PROGRESS.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE5_REMEDIATION_PLAN.md  QUICK_START.md  README.md  REMEDIATION_COMPLETED.md  SPEC_OPTIMIZATION_PATCH.md  T014a_QPS_RATE_LIMITER_IMPLEMENTATION_REPORT.md  T015-T019_PDF_PROCESSING_IMPLEMENTATION_REPORT.md  TASKS_EXPANSION_PATCH.md  VALIDATION_REPORT.md  debug_chroma_add.py  implementation_plan.md  manage.py  migrate_db.py  pyproject.toml  requirements.txt  speckit.constitution.md  test_acquisition.py  test_qa_report_20251125_171029.md  test_report_20251125_154844.json  test_report_20251125_154844.md  test_report_product_level_20251125_170305.json  test_report_product_level_20251125_170305.md  test_report_product_level_20251125_175310.json  test_report_product_level_20251125_175310.md  test_report_product_level_20251125_185227.json  test_report_product_level_20251125_185227.md
docs/: ADD_NEW_INSURANCE_COMPANY.md  ANALYSIS_REPORT_2025_11_25.md  CRAWLER_ARCHITECTURE.md  DATA_ACQUISITION_GUIDE.md  IMPROVEMENT_ROADMAP.md  PDF_PROCESSING_GUIDE.md  PHASE1_KICKOFF.md  PHASE6_COMPLETION_SUMMARY.md  PHASE6_IMPROVEMENTS.md  QPS_RATE_LIMITER_GUIDE.md  QUERY_STRATEGY_ANALYSIS.md  RATE_QUERY_RESPONSE_FORMAT.md  (+1 more)
(+230 files in other folders)
