[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-mcp-core"
version = "0.1.0"
description = "Insurance MCP Core Platform"
authors = [{name = "Author", email = "author@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "playwright>=1.40.0",
    "scrapy>=2.11.0",
    "aiohttp>=3.9.0",
    "pdfplumber>=0.10.0",
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
    "chromadb>=0.4.0",
    "openai>=1.12.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black",
    "isort",
    "mypy"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

